<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Demo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="app_channel">200</string>


    <string name="android_basic">Android basic</string>
    <string name="libgdx">Libgdx</string>
    <string name="openGl">OpenGl</string>
    <string name="component">Component</string>
    <string name="openSource">Open Source</string>
    <string name="shellEngine">Shell Engine</string>


    <string name="unit_1">第一章</string>
    <string name="unit_2">第二章</string>
    <string name="unit_3">第三章</string>
    <string name="unit_4">第四章</string>
    <string name="unit_5">第五章</string>
    <string name="unit_6">第六章</string>
    <string name="unit_7">第七章</string>
    <string name="unit_8">第八章</string>
    
    <string name="set_value">设置数值</string>
    <string name="cancle">取消</string>
    <string name="center">确定</string>
    <string name="alp_scal_animation">AlpAnimation</string>
    <string name="animation_one">动画一</string>
    <string name="animation_two">动画二</string>
    
    
    <!-- 第三单元 -->
    <string name="start">开始</string>
    
    <!-- 第4单元 -->
    <string name="send_msg">发送消息</string>
    <string name="read_start">read start ......</string>
    <string name="read_finish">read finish ......</string>
    
    
    <string name="choice_color">选择色彩</string>
    
    <string name="error_demo_one">running error following code</string>
    <string name="right_demo_one">running right following code</string>
    
    <string name="subject">subject</string>
    <string name="to">to</string>
    <string name="initCustomer">Create customer</string>
    <string name="title_activity_app_com">AppComActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    

</resources>